syntax = "proto3";

package product.v1;

import "google/protobuf/timestamp.proto";

option go_package = "gen/user/v1;userv1";

// Products service
service ProductService {
  // List paginated products
  rpc List(ListRequest) returns (ListResponse);
  // Create New product
  rpc Create(CreateRequest) returns (CreateResponse);

}

message Product {
  string                    id           = 1;
  string                    product_name = 2;
  string                    description  = 3;
  double                    unit_price   = 4;
  uint64                    stock        = 5;
  string                    category_id  = 6;
  google.protobuf.Timestamp created_at   = 7;
}

message ListRequest {
  uint32 page      = 1;
  uint32 page_size = 2;
}

message ListResponse {
  repeated Product products = 1;
  uint32           total    = 2;
}

message CreateRequest {
  string                    product_name = 1;
  string                    description  = 2;
  float                     unit_price   = 3;
  uint32                    stock        = 4;
  string                    category_id  = 5;
  google.protobuf.Timestamp created_at   = 6;
}

message CreateResponse {
  string product_id = 1;
}